Добавил контакты в шапке

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<header>
-
+<header class="page-header">
+  <section class="header-contacts">
+    <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+    <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+    <a class="header-phone">+7 (812) 555-05-55</a>
+  </section>
 </header>
 </body>
