Добавил стили к адресу и контактам

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 <header class="page-header">
+<!--  Адрес и контакты-->
   <section class="header-contacts">
-    <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-    <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-    <a class="header-phone">+7 (812) 555-05-55</a>
+    <div class="header-contacts-wrap">
+      <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта <span class="visually-hidden">Техномарт.</span></h1>
+      <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+    </div>
   </section>
 </header>
 </body>
