--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
     </div>
+<!--Поиск и авторизация-->
+    <div class="header-user">
+      <div class="header-user-wrap">
+        <a class="header-logo-link" href="index.html">
+          <img class="header-logo" src="images/image.svg" width="108" height="18" alt="ТЕХНОМАРТ.">
+        </a>
+      </div>
+    </div>
+<!--    Навигация-->
+    <nav class="navigation">
+
+    </nav>
   </section>
 </header>
 </body>
