--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
     <div class="header-user">
       <div class="header-user-wrap">
         <a class="header-logo-link" href="index.html">
-          <img class="header-logo" src="images/image.svg" width="108" height="18" alt="ТЕХНОМАРТ.">
+          <img class="header-logo" src="images/logo.svg" width="108" height="18" alt="ТЕХНОМАРТ.">
         </a>
+<!--        Поиск-->
+        <form class="header-user-form" action="https://echo.htmlacademy.ru/" method="get">
+          <svg class="search-icon" width="21" height="21" viewBox="0 0 21 21" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.48 16.39a8 8 0 1 1 6.31-3.1l5.38 5.39-1.41 1.41-5.38-5.38a7.95 7.95 0 0 1-4.9 1.68Zm6-8a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"/></svg>
+          <label class="user-form-label" for="header-user-form">Поиск:</label>
+          <input class="field" required placeholder="Поиск по сайту" type="search" name="header-user-form" id="header-user-form">
+        </form>
       </div>
     </div>
 <!--    Навигация-->
