Добавил авторизованного пользователя

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </form>
 <!--Аккаунт-->
         <div class="header-user-enter">
-          <button class="user-enter-button" type="button">ВОЙТИ</button>
-<!--          Вход в аккаунт-->
+          <button class="user-enter-button user-curren" type="button">Войти</button>
+<!--          Поповер авторизации-->
           <div class="user-enter-popover">
             <h2 class="user-enter-title">личный кабинет</h2>
             <button class="button-close" type="button">
@@ -56,6 +56,14 @@
                 <button class="button-border registration-button" type="button">Регистрация</button>
               </div>
             </form>
+          </div>
+<!--          Авторизированный пользователь-->
+          <div class="header-user-registered">
+            <button class="user-registered-button" type="button">Равшан Джамшутович</button>
+            <button class="user-close-button" type="button">
+              <span class="visually-hidden">Выйти из аккаунта.</span>
+              <svg class="close-button-icon" width="17" height="17" viewBox="0 0 17 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.19 14.39h-5v-12h5v-2h-7v16h7v-2Zm4.7-1.71L8.65 9.44h7.52v-2H8.65l3.24-3.25-1.42-1.41-4.94 4.95-.7.7.7.71 4.94 4.95 1.42-1.41Z"/></svg>            </button>
+            <!--          Поповер авторизированного пользователя-->
           </div>
         </div>
       </div>
