Добавил блок избранного

--- a/index.html
+++ b/index.html
@@ -87,7 +87,43 @@
     </div>
 <!--    Навигация-->
     <nav class="navigation">
-
+      <div class="navigation-wrap">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Компания</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Новости</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Спецпредложения</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
+<!--        Избранное-->
+        <div class="navigation-user">
+          <button class="navigation-user-favorites" type="button">
+            <img class="user-icon" src="images/icons/favorites-icon.svg" width="13" height="18" alt="Добавлено в избранное.">
+            <span class="user-favorites">12</span>
+          </button>
+          <button class="navigation-user-basket" type="button">
+            <img class="user-icon" src="images/icons/basket-icon.svg" width="18" height="18" alt="Добавлено в корзину.">
+            <span class="user-basket">2</span>
+          </button>
+          <button class="button navigation-user-button" type="button">Оформить заказ</button>
+        </div>
+      </div>
     </nav>
   </section>
 </header>
