--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+<!--Шапка-->
 <header class="page-header">
 <!--  Адрес и контакты-->
   <section class="header-contacts">
@@ -114,10 +115,12 @@
 <!--        Избранное-->
         <div class="navigation-user">
           <button class="navigation-user-favorites" type="button">
+            <span class="visually-hidden">Добавлено в избранное.</span>
             <img class="user-icon" src="images/icons/favorites-icon.svg" width="13" height="18" alt="Добавлено в избранное.">
             <span class="user-favorites">12</span>
           </button>
           <button class="navigation-user-basket" type="button">
+            <span class="visually-hidden">Добавлено в корзину.</span>
             <img class="user-icon" src="images/icons/basket-icon.svg" width="18" height="18" alt="Добавлено в корзину.">
             <span class="user-basket">2</span>
           </button>
@@ -127,4 +130,8 @@
     </nav>
   </section>
 </header>
+<!--Основная часть-->
+<main class="page-main">
+
+</main>
 </body>
