--- a/index.html
+++ b/index.html
@@ -132,6 +132,67 @@
 </header>
 <!--Основная часть-->
 <main class="page-main">
-
+<!--  Карточка товаров-->
+  <section class="main-card">
+    <h2 class="visually-hidden">Каталог товаров.</h2>
+    <ul class="main-card-list">
+      <li class="main-card-item card-new">
+        <h3 class="main-card-title">Материалы</h3>
+        <a class="main-card-link" href="#">На любой вкус</a>
+      </li>
+      <li class="main-card-item">
+        <h3 class="main-card-title">Инструмент</h3>
+        <a class="main-card-link" href="#">На все случаи</a>
+      </li>
+      <li class="main-card-item">
+        <h3 class="main-card-title">Техника</h3>
+        <a class="main-card-link" href="#">Для стройки</a>
+      </li>
+<!--      Слайдер-->
+      <li class="main-slider-item">
+        <ol class="card-slider-list">
+          <li class="card-slider-item current-slide">
+            <h4 class="card-slider-title">Дрели</h4>
+            <p class="card-slider-text">Соседям на радость!</p>
+            <a class="home-link card-slider-link" href="#">Открыть каталог</a>
+          </li>
+          <li class="card-slider-item">
+            <h4 class="card-slider-title">Перфораторы</h4>
+            <p class="card-slider-text">Настроящие мужские игрушки</p>
+            <a class="home-link card-slider-link" href="#">Открыть каталог</a>
+          </li>
+        </ol>
+<!--        Кнопки слайдера-->
+        <div class="sliders-controls">
+          <button class="slider-button slider-prev" type="button">
+            <span class="visually-hidden">Предыдущий товар.</span>
+          </button>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующий товар.</span>
+          </button>
+        </div>
+<!--        Пагинация слайдера-->
+        <div class="slider-pagination">
+          <ol class="slider-pagination-list">
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Первый слайд.</span>
+              </button>
+            </li>
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Второй слайд.</span>
+              </button>
+            </li>
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Третий слайд.</span>
+              </button>
+            </li>
+          </ol>
+        </div>
+      </li>
+    </ul>
+  </section>
 </main>
 </body>
