--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="slider-pagination">
           <ol class="slider-pagination-list">
             <li class="slider-pagination-item">
-              <button class="slider-pagination-button" type="button">
+              <button class="slider-pagination-button pagination-current" type="button">
                 <span class="visually-hidden">Первый слайд.</span>
               </button>
             </li>
