Закончил слайдер и карточки

--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@
           </ol>
         </div>
       </li>
+<!--      Карточки товара-->
+      <li class="main-card-item">
+        <h3 class="main-card-title">Скидки 50%</h3>
+        <a class="main-card-link" href="#">На 350 товаров</a>
+      </li>
+      <li class="main-card-item">
+        <h3 class="main-card-title">Доставка</h3>
+        <a class="main-card-link" href="#">Бесплатно</a>
+      </li>
     </ul>
   </section>
 </main>
