--- a/index.html
+++ b/index.html
@@ -278,6 +278,26 @@
             </li>
           </ul>
         </fieldset>
+<!--        Питание-->
+        <fieldset class="catalog-filter-supply">
+          <legend class="filter-supply-title">Питание</legend>
+          <ul class="filter-supply-list">
+            <li class="filter-supply-item">
+              <label class="filter-supply">
+                <input class="filter-supply-input visually-hidden" type="radio" name="supply-power" value="battery" checked>
+                <span class="filter-supply-mark"></span>
+                <span class="filter-supply-label">Аккумуляторные</span>
+              </label>
+            </li>
+            <li class="filter-supply-item">
+              <label class="filter-supply">
+                <input class="filter-supply-input visually-hidden" type="radio" name="supply-power" value="network">
+                <span class="filter-supply-mark"></span>
+                <span class="filter-supply-label">Сетевые</span>
+              </label>
+            </li>
+          </ul>
+        </fieldset>
       </form>
     </div>
   </section>
