Добавил неактивные состояния

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
             </li>
           </ul>
         </fieldset>
+        <button class="catalog-filters-button" type="submit">Показать</button>
       </form>
     </div>
   </section>
